Fix character template being very broken on smaller screen widths

--- a/less/evething.less
+++ b/less/evething.less
@@ -290,6 +290,23 @@ div.character-side {
   width: 256px;
   margin-right: 20px;
 }
+
+@media (max-width: 767px) {
+  div.character-main {
+    float: none;
+    margin-left: 0;
+  }
+  div.character-content {
+    margin-left: 0;
+  }
+  div.character-side {
+    float: none;
+    margin-right: 0;
+    display: block;
+    width: 100%;
+  }
+}
+
 div.character-sp {
   text-align: right;
   margin-right: 0.8em;
